@@ -1,3 +1,7 @@
+metadata-osd-0.5.4 / 2023-03-23
+===============================
+ * Don't use 'goto' statement to support Lua 5.1
+
 metadata-osd-0.5.3 / 2023-03-09
 ===============================
  * fix: Parse paths with backslashes for foldername fallback
